// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-tax-id-input Defaults to type and number first 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="AU" number="123456" status="unknown" type="eu_vat"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input Renders AU Tax Type 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="AU" status="unknown"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input Renders CA Tax Type 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="CA" status="unknown"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input Renders EU VAT Tax Type 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="DE" status="unknown"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input Renders UK VAT Tax Type 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input country="GB" status="unknown"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;

exports[`sc-order-tax-id-input renders 1`] = `
<sc-order-tax-id-input>
  <mock:shadow-root>
    <sc-tax-id-input status="unknown"></sc-tax-id-input>
  </mock:shadow-root>
</sc-order-tax-id-input>
`;
